WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165409
Fix JSC files so that we can build a release build with NDEBUG #undef'ed.
https://bugs.webkit.org/show_bug.cgi?id=165409
Summary
Fix JSC files so that we can build a release build with NDEBUG #undef'ed.
Mark Lam
Reported
2016-12-05 13:21:44 PST
This allows us to run a release build with DEBUG ASSERTs enabled.
Attachments
proposed patch.
(4.13 KB, patch)
2016-12-05 13:25 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-12-05 13:25:04 PST
Created
attachment 296182
[details]
proposed patch.
Keith Miller
Comment 2
2016-12-05 14:38:24 PST
Comment on
attachment 296182
[details]
proposed patch. r=me.
WebKit Commit Bot
Comment 3
2016-12-05 15:05:23 PST
Comment on
attachment 296182
[details]
proposed patch. Clearing flags on attachment: 296182 Committed
r209358
: <
http://trac.webkit.org/changeset/209358
>
WebKit Commit Bot
Comment 4
2016-12-05 15:05:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug