Source/JavaScriptCore/bytecode/BytecodeLivenessAnalysis.cpp
@@ -31,6 +31,7 @@
 #include "BytecodeUseDef.h"
 #include "CodeBlock.h"
 #include "FullBytecodeLiveness.h"
+#include "HeapInlines.h"
 #include "InterpreterInlines.h"
 #include "PreciseJumpTargets.h"
 
