Source/JavaScriptCore/bytecode/UnlinkedEvalCodeBlock.cpp
@@ -26,6 +26,8 @@
 #include "config.h"
 #include "UnlinkedEvalCodeBlock.h"
 
+#include "JSCellInlines.h"
+
 namespace JSC {
 
 const ClassInfo UnlinkedEvalCodeBlock::s_info = { "UnlinkedEvalCodeBlock", &Base::s_info, 0, CREATE_METHOD_TABLE(UnlinkedEvalCodeBlock) };
