Source/JavaScriptCore/bytecode/UnlinkedFunctionCodeBlock.cpp
@@ -26,6 +26,8 @@
 #include "config.h"
 #include "UnlinkedFunctionCodeBlock.h"
 
+#include "JSCellInlines.h"
+
 namespace JSC {
 
 const ClassInfo UnlinkedFunctionCodeBlock::s_info = { "UnlinkedFunctionCodeBlock", &Base::s_info, 0, CREATE_METHOD_TABLE(UnlinkedFunctionCodeBlock) };
